--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Mathias Laber Portefolio
+title: Mathias Lauber Portefolio
 showdownloads: true
 theme: jekyll-theme-minimal
 description: Bookmark this to keep an eye on my project updates!
