--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ theme_config:
       url: /blog
 
 # Paramètres globaux
-title: Votre Nom
-subtitle: Développeur Web passionné
-author: Votre Nom
-email: votre@email.com
+title: Mathias Lauber
+subtitle: DataViz / Data nerd
+author: Mathias Lauber
+email: Mathias.Lauber@outlook.com
