--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Mathias Lauber
 logo: /img/img.png
-description: Minimal is a theme for GitHub Pages.
+description: [Contact Me](mailto:mathias.lauber@outlook.com)
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
