--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Mathias Lauber
 logo: /img/img.png
-description: [Contact Me](mailto:mathias.lauber@outlook.com)
+description: 
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
