--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Mathias Lauber
 logo: /img/img.png
-description: 
+description: Mathias.Lauber@outlook.com
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
