--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Mathias Lauber
-logo: /img/imgv3.png
+logo: /img/imgfinal.png
 description: Mathias.Lauber@outlook.com
 show_downloads: false
 google_analytics:
