--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Mathias Lauber
 logo: /img/imgfinal.png
 description: Mathias.Lauber@outlook.com
-show_downloads: false
+show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
 # Sidebar settings
