--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,8 @@ description: Mathias.Lauber@outlook.com
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
+github:
+  is_project_page: false
 # Sidebar settings
 sidebar:
   position: right  # or right
